add the game's structure

--- a/index.html
+++ b/index.html
@@ -1,13 +1,28 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="output.css" rel="stylesheet">
+  <script src="./src/main.ts" defer></script>
 </head>
-<body>
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
+
+<body class="text-white bg-black">
+  <div class="text-center text-2xl font-bold ">Tic Tac Toe</div>
+  <div class="container flex justify-center items-center mt-32 p-4">
+    <ul class="grid grid-rows-3 grid-cols-3">
+      <button class="square border-r-2 border-b-2">1</button>
+      <button class="square border-r-2 border-b-2">1</button>
+      <button class="square border-b-2">1</button>
+      <button class="square border-r-2 border-b-2">1</button>
+      <button class="square border-r-2 border-b-2">1</button>
+      <button class="square border-b-2">1</button>
+      <button class="square border-r-2">1</button>
+      <button class="square border-r-2">1</button>
+      <button class="square">1</button>
+    </ul>
+  </div>
 </body>
+
 </html>
