--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body class="text-white bg-black flex justify-center content-center flex-col">
-  <div class="text-center text-2xl font-bold text-yellow-300">Tic Tac Toe</div>
-  <div id="result" class="text-center text-white text-xl font-bold"></div>
+  <div class="text-center text-2xl font-bold text-yellow-300 mt-8">Tic Tac Toe</div>
+  <div id="result" class="text-center text-xl font-bold h-16 p-4 text-yellow-400"></div>
   <div class="container flex justify-center items-center mt-32 p-4">
     <ul class="grid grid-rows-3 grid-cols-3">
       <button id="btn-1" class="square border-r-2 border-b-2"></button>
@@ -25,6 +25,7 @@
     </ul>
   </div>
   <button id="reset" class="reset">Reset</button>
+  <div id="restart"></div>
 </body>
 
 </html>
