--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="output.css" rel="stylesheet">
-  <script src="./src/main.ts" defer></script>
+  <script src="./src/main.js" type="" defer></script>
 </head>
 
 <body class="text-white bg-black flex justify-center content-center flex-col">
@@ -25,7 +25,7 @@
     </ul>
   </div>
   <button id="reset" class="reset">Reset</button>
-  <div id="restart"></div>
+  <div id="restart" class="text-center text-yellow-300 font-semibold"></div>
 </body>
 
 </html>
