--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <script src="./src/main.js" type="" defer></script>
 </head>
 
-<body class="text-white bg-black flex justify-center content-center flex-col">
+<body class="text-white bg-black flex justify-center content-center flex-col min-w-max">
   <div class="text-center text-2xl font-bold text-yellow-300 mt-8">Tic Tac Toe</div>
   <div id="result" class="text-center text-xl font-bold h-16 p-4 text-yellow-400"></div>
-  <div class="container flex justify-center items-center mt-32 p-4">
+  <div class="w-full flex justify-center items-center mt-16 p-4">
     <ul class="grid grid-rows-3 grid-cols-3">
       <button id="btn-1" class="square border-r-2 border-b-2"></button>
       <button id="btn-2" class="square border-r-2 border-b-2"></button>
